2003-01-07  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.orig: Deleted.

2002-11-15  Ezra Peisach  <epeisach@bu.edu>

	* sys_bsd.c: Moved declaration for susp() to type of file and
	provide prototype.

	* commands.c, externs.h, telnet.c, network.c: Add prototype
	declaration for command handler table dispatch functions. Make
	functions called consistant with prototype. Misc unsigned/signed
	cleanups.

	* authenc.c, main.c, utilities.c: Signed vs. unsigned cleanup.

2002-10-22  Ezra Peisach  <epeisach@bu.edu>

	* configure.in: Autoconf 2.55 will not simply use cpp to test for
	header file existance - the header file must be compilable. This
	will mean that if one header depends on another, it must be
	included. Test for term.h using the optional fourth argument to
	AC_CHECK_HEADERS to specify include files to test.

2002-08-29  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in: Revert $(S)=>/ change, for Windows support.

2002-08-23  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in: Change $(S)=>/ and $(U)=>.. globally.

2002-04-12  Tom Yu  <tlyu@mit.edu>

	* configure.in: Sepcial-case solaris+gcc to always find curses.h,
	since it fails to find it otherwise due to some macro redefinition
	warnings.

2002-03-26  Ken Raeburn  <raeburn@mit.edu>

	* commands.c: Include fake-addrinfo.h, not fake-addrinfo.c.
	(FAI_PREFIX): Delete.

2001-10-09  Ken Raeburn  <raeburn@mit.edu>

	* commands.c, externs.h, ring.h, telnet.c: Make prototypes
	unconditional.

2001-09-07  Ken Raeburn  <raeburn@mit.edu>

	* commands.c (tn): Don't crash printing null hostname in case
	where supplied destination is a numeric address that doesn't map
	to a hostname.

2001-09-01  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in (SRCS): Use $(srcdir).

2001-08-30  Ken Raeburn  <raeburn@mit.edu>

	* commands.c: Include netdb.h and fake-addrinfo.c.
	(FAI_PREFIX): Define.
	(hostaddr): Deleted.
	(hostaddrstring): New static variable.
	(status): Use hostaddrstring instead of hostaddr.